# proto/swagger/cluster.swagger.json
@@ -67,6 +67,21 @@
             "in": "path",
             "required": true,
             "type": "string"
+          },
+          {
+            "name": "continue",
+            "description": "A continue token to request the next page of results. The token is acquired\nfrom the previous ListCluster call or can be omitted when fetching the first page.",
+            "in": "query",
+            "required": false,
+            "type": "string"
+          },
+          {
+            "name": "limit",
+            "description": "The maximum number of clusters to return for the requested page.\nFor backward compatibility, the default value is 0 which returns all clusters without pagination.",
+            "in": "query",
+            "required": false,
+            "type": "string",
+            "format": "int64"
           }
         ],
         "tags": [
@@ -623,6 +638,17 @@
             "$ref": "#/definitions/protoCluster"
           },
           "description": "A list of clusters returned.",
+          "readOnly": true
+        },
+        "continue": {
+          "type": "string",
+          "description": "The continue token for the next page of clusters.",
+          "readOnly": true
+        },
+        "remainingItemCount": {
+          "type": "string",
+          "format": "int64",
+          "description": "The remaining number of clusters that have not been returned.",
           "readOnly": true
         }
       }
